--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
     font-size: small;
 }
 
+.bold {
+    font-weight: 600;
+}
+
 .navbar {
     height: 57px;
     display: flex;
@@ -211,7 +215,6 @@ main {
 
 .article {
     display: flex;
-    margin-top: 12px;
     padding-top: 24px;
     border-bottom: 1px solid #F2F2F2;
 }
@@ -423,7 +426,7 @@ main {
 
 .see-more-container > p {
     margin-top: 30px;
-    color: rgb(0, 190, 0);
+    color: rgb(0, 155, 0);
     font-weight: 400;
     font-size: 13px;
     cursor: pointer;
@@ -434,7 +437,7 @@ main {
 }
 
 .follow-container-title > h4 {
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 600;
 }
 
@@ -472,4 +475,51 @@ main {
     fill: rgb(36, 36, 36);
     background-color: white;
     cursor: pointer;
+}
+
+.recently-saved-container {
+    margin-top: 40px;
+}
+
+.recently-saved-title > h4 {
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.recently-saved-card-top {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    display: flex;
+    cursor: pointer;
+}
+
+.recently-saved-card-bottom > h3 { 
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.recently-saved-card-bottom > p { 
+    cursor: pointer;
+}
+
+.card-image {
+    height: 20px;
+    width: 20px;
+    margin-right: 10px;
+}
+
+.footer {
+    margin-top: 60px;
+    display: flex;
+    color: gray;
+    flex-direction: row;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 20px 0;
+}
+
+.footer > div {
+    margin-left: 5px;
+    
 }
