--- a/style.css
+++ b/style.css
@@ -310,6 +310,7 @@ main {
 }
 
 .rightside-container {
+    top: -1096px;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -517,6 +518,7 @@ main {
 }
 
 .footer > div {
-    margin-left: 5px;
+    margin: 0 10px;
     cursor: pointer;
+    font-weight: 300;
 }
