--- a/style.css
+++ b/style.css
@@ -247,10 +247,11 @@ main {
 }
 
 .tag-container {
-    padding: 32px 0;
+    padding: 12px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: #7F7F7F;
 }
 
 .left-side {
@@ -266,7 +267,6 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-right: 15px;
     cursor: pointer;
 }
 
@@ -276,7 +276,7 @@ main {
 }
 
 .bookmark-container {
-    margin-right: 20px;
+    margin-right: 10px;
 }
 
 .fa-bookmark-tag {
