modified:   style.css

--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ body {
     border-radius: 30px;
     background-color: white;
     border: 1px solid #242424;
+    cursor: pointer;
 }
 
 textarea:focus, input:focus{
@@ -99,6 +100,7 @@ textarea:focus, input:focus{
     border-radius: 50%;
     cursor: pointer;
     margin-top: 5px;
+    cursor: pointer;
 }
 
 .user-logo:hover {
