--- a/style.css
+++ b/style.css
@@ -492,7 +492,12 @@ main {
     cursor: pointer;
 }
 
-.recently-saved-card-bottom > h3 { 
+.recently-saved-card-bottom-description {
+    flex-wrap: wrap;
+    overflow: hidden;
+}
+
+.recently-saved-card-bottom-description > h3 { 
     margin-bottom: 10px;
     cursor: pointer;
 }
